demo-scripts/templates/es-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-elastic-client
  namespace: tsb
spec:
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  podSelector:
    matchLabels:
      common.k8s.elastic.co/type: elasticsearch
  policyTypes:
  - Ingress
